 * Added DB_KEYS, which lists the next set of keys in the Asterisk database
   hierarchy.
 * Added STRREPLACE function.  This function let's the user search a variable
   for a given string to replace with another string as many times as the
   user specifies or just throughout the whole string.
 * Added option to CHANNEL(pickupgroup) allow reading and setting the pickupgroup of channel.

libpri channel driver (chan_dahdi) DAHDI changes
--------------------------
 * Added moh_signaling option to specify what to do when the channel's bridged
   peer puts the ISDN channel on hold.
 * Added display_send and display_receive options to control how the display ie
   is handled.  To send display text from the dialplan use the SendText()
   application when the option is enabled.
 * Added mcid_send option to allow sending a MCID request on a span.

Calendaring
--------------------------
 * Added setvar option to calendar.conf to allow setting channel variables on
   notification channels.
 * Added "calendar show types" CLI command to list registered calendar
   connectors.

MixMonitor
--------------------------
 * Added two new options, r and t with file name arguments to record 
   single direction (unmixed) audio recording separate from the bidirectional
   (mixed) recording.  The mixed file name argument is optional now as long
   as at least one recording option is used.

FollowMe
--------------------------
 * Added a new option, l, which will disable local call optimization for
   channels involved with the FollowMe thread.  Use this option to improve
   compatability for a FollowMe call with certain dialplan apps, options, and
   functions.

Meetme
--------------------------
 * Added option "k" that will automatically close the conference when there's
   only one person left when a user exits the conference.

CEL
--------------------------
 * cel_pgsql now supports the 'extra' column for data added using the
   CELGenUserEvent() application.

pbx_lua